# cayley-dickson

./: README.md  caley-dickson.cabal  stack.yaml
app/: Main.hs
src/: CDParser.hs  Lib.hs  Parser.hs
test/: Spec.hs
