name:                caley-dickson
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/caley-dickson#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5,
                       parsec >=3.1 && <4,
                       parsec-numbers >=0.1.0 && <6
  default-language:    Haskell2010

executable caley-dickson-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , caley-dickson
  default-language:    Haskell2010

test-suite caley-dickson-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , caley-dickson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/caley-dickson
